[build-systen]
requires = ["setuptools>=61.0"]
build_backend = "setuptools.build_meta"

[project]
name = "colors"
version = "0.1.0"
description = "Ein einfaches Modul für farbige Terminalausgaben mit ANSI-Sequenzen"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/StephenHawking73/colors/"